[package]
name = "corus"
version = "0.1.0"
authors = ["carrotflakes <carrotflakes@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
biquad-filter = { path = "./biquad-filter" }

[dev-dependencies]
hound = "3.4"
ezmid = {git = "https://github.com/carrotflakes/ezmid.git", branch = "main"}
