[package]
name = "corus-v2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
serde = ["dep:serde"]

[dependencies]
num-traits = "0.2"
biquad = "0.4"
serde = { version = "1.0", features = ["derive"], optional = true }

[dev-dependencies]
hound = "3.4"
ezmid = {git = "https://github.com/carrotflakes/ezmid.git", branch = "main"}
